Dissolve edges and vertices problem with triangulate #37046

Closed
opened 2013-10-11 19:59:35 +02:00 by Reiner Prokein · 6 comments

%%%--- Operating System, Graphics card ---
Win 7, 64 Bit, Nvidia 460 GTX

- Blender version with error, and version that worked ---

r 60623, Blender 2.69.1

- Short description of error ---

I have some primitive geometry. When i dissolve edges and vertices to get rid of some edges, and then try to triangulate the result, then the triangulation goes to the wrong vertices. Vertices that are not at the face that needs to be triangulated. This is a showstopper bug for me since there seems no way to tell Blender to triangulate the correct geometry.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Hard to explain, quickly to show. I have attached a video that shows the process at an example mesh. The scene result is also attached. So is the base mesh as Obj.

%%%

%%%--- Operating System, Graphics card --- Win 7, 64 Bit, Nvidia 460 GTX - Blender version with error, and version that worked --- r 60623, Blender 2.69.1 - Short description of error --- I have some primitive geometry. When i dissolve edges and vertices to get rid of some edges, and then try to triangulate the result, then the triangulation goes to the wrong vertices. Vertices that are not at the face that needs to be triangulated. This is a showstopper bug for me since there seems no way to tell Blender to triangulate the correct geometry. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Hard to explain, quickly to show. I have attached a video that shows the process at an example mesh. The scene result is also attached. So is the base mesh as Obj. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%hi, thanks for the report. But can you please attach a .blend or a .zip? I have no tools to unrar files here.
The ideal would be to have a .blend before the error (you said you added an .obj and the resulting .blend, but the .blend with the imported .obj would be the start point actually).%%%

%%%hi, thanks for the report. But can you please attach a .blend or a .zip? I have no tools to unrar files here. The ideal would be to have a .blend before the error (you said you added an .obj and the resulting .blend, but the .blend with the imported .obj would be the start point actually).%%%
Author

%%%Hi Dalai,

7zip is freeware and open source. And opens rar archives just fine :)

I have attached the same dataset as zip now too. And added a fresh scene with the imported obj file.%%%

%%%Hi Dalai, 7zip is freeware and open source. And opens rar archives just fine :) I have attached the same dataset as zip now too. And added a fresh scene with the imported obj file.%%%

%%%fixed on rev.60722. Thanks for the report and the sample file!%%%

%%%fixed on rev.60722. Thanks for the report and the sample file!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thanks for fixing :)%%%

%%%Thanks for fixing :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37046
No description provided.