fix [#37046] Dissolve edges and vertices problem with triangulate with review and collaboration from Campbell Barton